<resources>
    <string name="app_name">Calorific</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_screen">Home Screen</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="day_summary">Day Summary</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="n300_kcal">🔥:\n300 kcal</string>
    <string name="protein_n10_g">protein:\n10 g</string>
    <string name="carbs_n55_g">carbs:\n55 g</string>
    <string name="_1250_1700_calories_nremaining_450">1250 / 1700 calories\nRemaining: 450</string>
    <string name="good_morning_yotam">Good morning Yotam!</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="prepared_meals">Prepared Meals</string>
    <string name="add_a_new_meal">Add a new meal</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="save_changes">Save Changes</string>
    <string name="daily_calorie_goal">Daily Calorie Goal</string>
    <string name="add">Add</string>
    <string name="enter_quantity_grams">Enter Quantity (grams)</string>
    <string name="todo">TODO</string>
    <string name="selected_food">Selected Food</string>
    <string name="oatmeal_with_fruits">Oatmeal with Fruits</string>
    <string name="morning_run_30_minutes">Morning Run: 30 minutes</string>
    <string name="remove">Remove</string>
    <string name="calories_burned_500_kcal">Calories Burned: 500 kcal</string>
    <string name="exercises_performed">Exercises Performed</string>
    <string name="food_items_consumed">Food Items Consumed</string>
    <string name="total_calories_1800_kcal">Total Calories: 1800 kcal</string>
    <string name="total_carbohydrates_150_g">Total Carbohydrates: 150 g</string>
    <string name="total_fat_45_g">Total Fat: 45 g</string>
    <string name="total_protein_60_g">Total Protein: 60 g</string>
    <string name="calories_burned_0_kcal">Calories Burned: 0 kcal</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="calorific">Calorific</string>
    <string name="www_calorific_co_il">www.calorific.co.il</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="meal_name">Meal Name</string>
    <string name="protein">Protein</string>
    <string name="calories_0_kcal">Calories: 0 kcal</string>
    <string name="carbohydrates_0_g">Carbohydrates: 0 g</string>
    <string name="fat_0_g">Fat: 0 g</string>
    <string name="protein_0_g">Protein: 0 g</string>
</resources>
