<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home_screen">

        </item>
        <item
            android:id="@+id/nav_meal"
            android:icon="@drawable/meal"
            android:title="@string/add_meal">
        </item>

        <item
            android:id="@+id/nav_ready_meals"
            android:icon="@drawable/meal"
            android:title="Ready Meals">
        </item>

        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/exercise"
            android:title="@string/add_exercise">

        </item>
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/summary"
            android:title="@string/day_summary">

        </item>
    </group>

    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/user"
                    android:title="@string/my_profile">

                </item>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout">

                </item>
            </group>
        </menu>

    </item>


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"
                android:title="@string/rate_us" />
        </menu>
    </item>

</menu>
