<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#f5f5f5">

    <TextView
        android:id="@+id/tv_selected_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_food"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/iv_food_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/tv_selected_food"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_food_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/enter_quantity_grams"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="18sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:padding="12dp"
        android:text="@string/add"
        android:textColor="#263238"
        android:textSize="18sp" />

</RelativeLayout>
