<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ViewDaySummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <!-- Screen Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_day_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/day_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#43A047" />

        <!-- Nutritional Data Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Total Carbohydrates -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_total_carbs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_carbohydrates_150_g"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

                <!-- Total Protein -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_total_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_protein_60_g"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

                <!-- Total Fat -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_total_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_fat_45_g"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

                <!-- Total Calories -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_total_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_calories_1800_kcal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

                <!-- Calories Burned -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_calories_burned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_burned_500_kcal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#000000"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Food Items Consumed Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_food_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_items_consumed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#2E7D32" />

                <!-- Meal List with Remove Button -->
                <LinearLayout
                    android:id="@+id/ll_meals_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <!-- Example of Meal Data -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        tools:ignore="UselessParent">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/oatmeal_with_fruits"
                            android:textColor="#000000"/>

                        <Button
                            android:id="@+id/btn_remove_meal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#F44336"
                            android:text="@string/remove"
                            android:textColor="#000000"
                            tools:ignore="DuplicateSpeakableTextCheck" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Exercises Performed Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_exercise_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_performed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#2E7D32" />

                <!-- Exercise List with Remove Button -->
                <LinearLayout
                    android:id="@+id/ll_exercises_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <!-- Example of Exercise Data -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        tools:ignore="UselessParent">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/morning_run_30_minutes"
                            android:textColor="#000000"/>

                        <Button
                            android:id="@+id/btn_remove_exercise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#F44336"
                            android:text="@string/remove"
                            android:textColor="#000000" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
