<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start" />

    <!-- Main content area -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"> <!-- רקע בהיר ונייטרלי -->

        <!-- התאמת הצבעים של toolbar עם התפריט -->

        <!-- Content under the NavBar -->
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:background="@color/green" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:text="@string/good_morning_yotam"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/dark_gray" /> <!-- טקסט בצבע אפור כהה -->

        <!-- Calorie Circle -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_greeting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_calorie_info"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:text="@string/_1250_1700_calories_nremaining_450"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:lineSpacingExtra="4dp"
                android:letterSpacing="0.05"
                android:textStyle="bold"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:text="@string/carbs_n55_g"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:text="fat:\n10 g"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="180dp"
                android:text="@string/protein_n10_g"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_burned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="180dp"
                android:text="@string/n300_kcal"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

        </RelativeLayout>


        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_summary"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:text="View your day summary"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_food"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="60dp"
                    android:text="Add Meal"
                    android:textColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ready_meals"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="Ready Meals"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_exercise"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="60dp"
                    android:text="Add exercise"
                    android:textColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_update_user_data"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:text="My Profile"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
